[package]
name = "crab-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-map = "2.6.0"
fallible-streaming-iterator = "0.1.9"
id-arena = "2.2.1"
lazy_static = "1.4.0"
memoize = "0.4.0"
rand = "0.8.5"
scopeguard = "1.2.0"
streaming-iterator = "0.1.9"
strum = { version = "0.25.0", features = ["derive"] }
