[package]
name = "crab-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
array-init = "2.1.0"
enum-map = "2.6.0"
fallible-streaming-iterator = "0.1.9"
id-arena = "2.2.1"
lazy_static = "1.4.0"
memoize = "0.4.0"
num = "0.4.1"
pprof = { version = "0.12.0", features = ["flamegraph", "prost-codec", "protobuf-codec"] }
rand = "0.8.5"
scopeguard = "1.2.0"
streaming-iterator = "0.1.9"
strum = { version = "0.25.0", features = ["derive"] }
