[package]
name = "rust-chess"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "perft"
path = "src/profiler.rs"
required-features = ["profiling"]

[lib]
name = "rust_chess"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
profiling = ["pprof"]

[dependencies]
array-init = "2.1.0"
enum-map = "2.6.0"
lazy_static = "1.4.0"
memoize = "0.4.0"
num = "0.4.1"
rand = "0.8.5"
scopeguard = "1.2.0"
strum = { version = "0.25.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.11.0"

async-std = "1.12.0"

pprof = { version = "0.12.0", features = [
    "flamegraph",
    "prost-codec",
    "protobuf-codec",
], optional = true }
num-format = "0.4.4"
tokio = { version = "1.30.0", features = ["full"] }
