[package]
name = "crab-chess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
array-init = "2.1.0"
enum-map = "2.6.0"
fallible-streaming-iterator = "0.1.9"
id-arena = "2.2.1"
lazy_static = "1.4.0"
memoize = "0.4.0"
num = "0.4.1"
rand = "0.8.5"
scopeguard = "1.2.0"
streaming-iterator = "0.1.9"
strum = { version = "0.25.0", features = ["derive"] }
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
itertools = "0.11.0"
wasm-bindgen-futures = "0.4.37"
async-std = "1.12.0"
chrono = "0.4.26"
async-recursion = "1.0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
pprof = { version = "0.12.0", features = ["flamegraph", "prost-codec", "protobuf-codec"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
]
