[package]
name = "wasm-chess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rust-chess = { path = "../rust-chess" }

array-init = "2.1.0"
enum-map = "2.6.0"
memoize = "0.4.0"
num = "0.4.1"
rand = "0.8.5"
scopeguard = "1.2.0"
strum = { version = "0.25.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.11.0"

chrono = "0.4.26"
async-std = "1.12.0"
lazy_static = "1.4.0"

console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
wasm-bindgen-test = "0.3.34"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.4", features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
] }
